fix firefox whitespace issue with userpanel-links

--- a/assets/less/base/ui/userpanel.less
+++ b/assets/less/base/ui/userpanel.less
@@ -115,6 +115,7 @@
 }
 .userpanel-menu-link {
 	display: inline-block;
+	float: left;
 	width: 100%;
 	height: 3rem;
 	line-height: 3rem;
